--- a/dev_symposium/introducing_angularjs/todolist_angularjs_filter.html
+++ b/dev_symposium/introducing_angularjs/todolist_angularjs_filter.html
@@ -22,7 +22,12 @@
 
 <body ng-controller="MainCtrl" ng-cloak>
 
-  <ol item-list items="items" filter-by="keyword" order-by="text"></ol>
+  <ol>
+    <li ng-repeat="item in items | filter: { text: keyword } | orderBy: 'text'">
+      <input type="checkbox" id="item{{$index}}" ng-model="item.completed">
+      <label for="item{{$index}}" ng-class="{ 'completed': item.completed }">{{ item.text }}</label>
+    </li>
+  </ol>
 
   <input type="text" ng-model="newItem.text">
   <button ng-click="add()">Add</button>
@@ -51,10 +56,8 @@
           $scope.newItem = {};
         };
 
-      }); // end of controller MainCtrl
+      }); // end of controller
   </script>
-
-  <script src="directives/item-list.js"></script>
 
 </body>
 </html>
